--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
-Hello World !
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="icon" type="images/png" href="img/techis-logo.png"></link>
+    <title>Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
+        <div class="container">
+            <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>ortfolio</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarToggler">
+            <ul class="navbar-nav ms-auto mb-2">
+              <li class="nav-item">
+                <a class="nav-link font-black" href="#about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link font-black" href="#Project">Project</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div id="about">
+          <h2><span class="font-primary">A</span>bout</h2>
+          <img src="img/PIC2.jpg"/>
+          <div class="name">Olisaebuka Eze</div>
+          <div class="vocation">Web Application Developer</div>
+          <div class="skills">HTML / CSS / Python</div>
+          <p>As a Web developer and front end developer.I worked on </p>
+          <div class="email">olisaeze@gmail.com</div>
+          <div class="icons">
+              <a href="https://github.com/olisaeze"><i class="bi bi-github"></i></a>
+              <a href="https://www.linkedin.com/in/olisa-eze-41541736/
+              "><i class="bi bi-linkedin ms-10"></i></a>
+          </div>
+      </div>
+      <div id="Project">
+        <h2><span class="font-primary">P</span>roject</h2>
+        <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/project-twitter.png" alt="Twitter Clone">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Twitter Clone</h5>
+                  <p class="card-text">This is a wider cardditional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">
+                      Test Login Account<br>
+                      Email: test@gmail.com <br>
+                      Passowrd: 1234
+                  </small></p>
+                  <a href="#" target="_blank" class="btn btn-secondary">Website link</a>
+                  <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/project-netflix.png" alt="Netflix Clone">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Netflix Clone</h5>
+                  <p class="card-text">This is a wider cardditional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">
+                      Test Login Account<br>
+                      Email: test@gmail.com <br>
+                      Passowrd: 1234
+                  </small></p>
+                  <a href="#" target="_blank" class="btn btn-secondary">Website link</a>
+                  <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+
+</body>
+</html>
